--- a/browser/themes/pinstripe/browser.css
+++ b/browser/themes/pinstripe/browser.css
@@ -1638,6 +1638,7 @@ window[tabsontop="false"] richlistitem[type~="action"][actiontype="switchtab"][s
 
 #share-button {
   -moz-image-region: rect(0, 16px, 16px, 0);
+  -moz-margin-end: 3px;
 }
 
 #socialUserPortrait {
@@ -4158,7 +4159,7 @@ html|*#gcli-output-frame {
 
 .chat-title {
   font-weight: bold;
-  color: -moz-dialogtext;
+  color: black;
   text-shadow: none;
   cursor: inherit;
 }
